--- a/styles.css
+++ b/styles.css
@@ -67,8 +67,10 @@ section {
 }
 
 #wedding {
-  background: url("assets/bg.jpg") no-repeat fixed center;
+  background: url("assets/bg.jpg") no-repeat fixed;
+  background-position: 70% 50%; 
   background-size: cover;
+  overflow: hidden;
 }
 
 #wedding .banner {
