--- a/styles.css
+++ b/styles.css
@@ -109,10 +109,20 @@ section h1 {
   z-index: 1;
 }
 
+#venue .flexContainer {
+  flex-wrap: wrap;
+  flex-direction: column;
+  max-width: 800px;
+}
+
 #venue div.flex {
   background-color: rgba(255, 255, 255, 0.85);
   border: 1px solid gray;
   color: black;
+}
+
+#map {
+  padding: 0;
 }
 
 #housing {
@@ -140,7 +150,7 @@ section h1 {
 }
 
 #toastmasters img {
-  max-width: 80%;
+  max-width: 50%;
   border-radius: 10px;
 }
 
