--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,17 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: 'Lato', sans-serif;
+  overflow: hidden;
 }
 
 main {
   scroll-snap-type: y mandatory; 
+  overflow-y: scroll;
+  height: 100vh;
 }
 
 /* header */
@@ -71,7 +78,7 @@ header nav ul li a.active {
 
 section {
   scroll-snap-align: center; 
-  min-height: 80vh;
+  min-height: 100vh;
   padding: 10px;
   display: flex;
   flex-direction: column;
@@ -88,6 +95,7 @@ section h1 {
 
 #wedding {
   height: 100vh;
+  max-height: 100vh;
   background: url("assets/bg.jpg") no-repeat fixed;
   background-position: 70% 50%; 
   background-size: cover;
@@ -137,26 +145,23 @@ section h1 {
   background: #ced6e0;
 }
 
-#rsvp {
-  background: url("assets/osa.jpg");
-  background-repeat: no-repeat;
-  background-position: bottom;
-  background-attachment: fixed;
-  background-color: #E8D6D2;
-  height: 80vh;
-
-  justify-content: flex-start;
-  padding-top: 10vh;
-}
-
 #toastmasters img {
   max-width: 50%;
   border-radius: 10px;
 }
 
 #photos {
-  background: #747d8c;
+  background: #949d9c;
   color: white;
+  min-height: 0;
+  padding: 50px;
+}
+
+#photos .box {
+  opacity: 25%;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 20px;
 }
 
 #music {
@@ -164,11 +169,27 @@ section h1 {
   color: white;
 }
 
+#rsvp {
+  background: url("assets/osa.jpg");
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-attachment: fixed;
+  background-color: #E8D6D2;
+  height: 70vh;
+
+  justify-content: flex-start;
+}
+
+#rsvp h1 {
+  margin-top: 20vh;
+}
+
 section#end {
   height: 10px;
   min-height: 10px;
   background-color: black;
 }
+
 
 /* animations */
 
