--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,16 @@ header nav ul li a {
   display: flex;
   align-items: center;
   gap: 5px;
+  border: 1px solid rgba(0,0,0,0);
+  border-radius: 5px;
+
+  background-color: rgba(0,0,0,0);
+  text-align: center;
+}
+
+header nav ul li a:not(.active):hover {
+  color: white;
+  border: 1px solid white;
 }
 
 header nav ul {
@@ -61,7 +71,6 @@ header nav ul li a.active span {
 header nav ul li a.active {
   color: white;
   background: darkmagenta;
-  border-radius: 5px;
 }
 
 @media (min-width: 768px) {
@@ -104,12 +113,7 @@ section h1 {
 }
 
 #venue {
-  background-image: url('assets/wedding.jpg');
-  background-size: 60%;
-  background-repeat: repeat;
-  background-position: center;
-  background-attachment: fixed;
-  background-color: #E8D6D2;
+  background-color: white;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -118,15 +122,23 @@ section h1 {
   z-index: 1;
 }
 
+#venue img {
+  max-width: 100%;
+}
+
 #venue .flexContainer {
   flex-wrap: wrap;
   flex-direction: column;
 }
 
 #venue div.flex {
-  background-color: rgba(255, 255, 255, 0.95);
+  background-color: #E8D6D2;
   border: 1px solid gray;
   color: black;
+}
+
+#venue h2 {
+  margin-top: 0;
 }
 
 #map {
@@ -138,7 +150,7 @@ section h1 {
 }
 
 #housing .flex {
-  min-width: 250px;
+  min-width: 350px;
 }
 
 #housing img {
@@ -159,10 +171,12 @@ section h1 {
   border-radius: 30px;
 }
 
-#toastmasters .narrow {
-}
-
 @media (min-width: 768px) {
+  #housing {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
   #toastmasters img {
     max-width: 500px;
   }
@@ -250,11 +264,16 @@ div.border {
 /* shared */
 
 a {
-  color: darkmagenta;
+  color: rgba(0, 0, 0);
+  background-color: rgba(255, 255, 255, 0.25);
+  padding: 0 5px;
+  text-align: center;
+  border-radius: 5px;
+  font-weight: bold;
 }
 
 a:visited {
-  color: darkmagenta;
+  color: rgba(0, 0, 0);
 }
 
 a:hover {
@@ -291,18 +310,31 @@ a:hover {
   border-radius: 15px;
 }
 
+.subFlexContainer {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  padding-left: 0;
+  gap: 10px;
+}
+
+.subFlex {
+  flex: 1;
+}
+
+.subFlexLarge {
+  flex: 2;
+}
+
 @media (min-width: 768px) {
   .flexContainer {
-    overflow: visible; 
+    /*flex-wrap: wrap;
+    overflow: visible;*/
     gap: 24px; 
     justify-content: space-between; 
   }
 
   .flex {
     flex: 1; 
-  }
-
-  .flexContainer {
-    flex-wrap: wrap;
   }
 }
