--- a/styles.css
+++ b/styles.css
@@ -65,12 +65,18 @@ header nav ul li a span {
 }
 
 header nav ul li a.active span {
-  display: inline;
+  /*display: inline;*/
 }
 
 header nav ul li a.active {
   color: white;
   background: darkmagenta;
+}
+
+@media (max-width: 320px) {
+  header nav ul {
+    flex-wrap: wrap;
+  }
 }
 
 @media (min-width: 768px) {
@@ -154,7 +160,7 @@ section h1 {
 }
 
 #housing img {
-  max-width: 90%;
+  max-width: 80%;
 }
 
 #info {
@@ -169,6 +175,18 @@ section h1 {
 #toastmasters img {
   max-width: 90%;
   border-radius: 30px;
+}
+
+@media (max-width: 400px) {
+  #housing .flexContainer {
+    flex-wrap: wrap;
+    flex-direction: column;
+    margin-bottom: 50vh;
+  }
+
+  #housing .flexContainer .flex {
+    scroll-snap-align: center;
+  }
 }
 
 @media (min-width: 768px) {
@@ -302,7 +320,7 @@ a:hover {
 }
 
 .flex {
-  flex: 0 0 90%; 
+  flex: 0 0 80%; 
   border: 0;
   padding: 16px;
   box-sizing: border-box;
@@ -337,4 +355,32 @@ a:hover {
   .flex {
     flex: 1; 
   }
+}
+
+/* scroll */
+
+.hidden {
+  visibility: hidden;
+}
+
+.dot-container {
+  text-align: center;
+  padding: 20px;
+  /*background: #ddd;*/
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.dot {
+  height: 25px;
+  width: 25px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.dot.active {
+  background-color: #902993;
 }
